--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,7 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$bleu-pale: #bbf1fa;
+$rose-pale: #fcd1d1;
+$vert-pale: #a6f0c6;
+$jaune-pale: #f8dc81;
