--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,144 @@
-.navbar-lewagon {
-  justify-content: space-between;
-  background: white;
+.container-barnav {
+  position: absolute;
+  z-index: 10000;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  transform: translate(-0%, -50%);
+  transition: 1s ease-out;
+  &.active {
+    transform: translate(-0%, -0%);
+  }
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+.barnav {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding: 50px 0px 25px 0px;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.barnavlink {
+  position: relative;
+  text-decoration: none;
+  opacity: 0.5;
+  transition: 1s ease;
+
+  span {
+  position: absolute;
+  width: 0%;
+  height: 1px;
+  background-color: black;
+  transition: 1s ease-out;
+  }
+
+  &:hover {
+    opacity: 1;
+    text-decoration: none;
+    span {
+      width: 100%;
+    }
+  }
+}
+
+.gouvernail-container {
+  display: flex;
+  position: relative;
+  align-self: center;
+  width: 90px;
+  height: 90px;
+  // border: 1px solid red;
+}
+
+.gouvernail-rond {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+  width: 65%;
+  height: 65%;
+  border-radius: 50%;
+  border: 1px solid black;
+  opacity: 0;
+  transition: opacity 1s ease-out;
+  &.active {
+    opacity: 1;
+  }
+}
+
+.gouvernail-bars {
+  position: relative;
+  width: 100%;
+  height: 100%;
+
+  $offsetY: 20px;
+
+  .bar {
+    position: absolute;
+    top: 50%;
+    content: "";
+    height: 1px;
+    width: 100%;
+    background-color: black;
+    transition: 1s ease-out;
+
+    &.bar--1 {
+      transform: translate3d(0, +$offsetY, 0);
+    }
+    &.bar--2 {
+      transform: translate3d(0, +$offsetY, 0);
+    }
+    &.bar--3 {
+      transform: translate3d(0, -$offsetY, 0);
+    }
+    &.bar--4 {
+      transform: translate3d(0, -$offsetY, 0);
+    }
+  }
+
+  &:hover {
+    .bar--1 {
+      transform: translate3d(0, +$offsetY, 0) rotate(180deg);
+    }
+    .bar--2 {
+      transform: translate3d(0, +$offsetY, 0) rotate(180deg);
+    }
+    .bar--3 {
+      transform: translate3d(0, -$offsetY, 0) rotate(180deg);
+    }
+    .bar--4 {
+      transform: translate3d(0, -$offsetY, 0) rotate(180deg);
+    }
+  }
+
+  &.active {
+    .bar--1 {
+      transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(450deg);
+    }
+    .bar--2 {
+      transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(135deg);
+    }
+    .bar--3 {
+      transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(180deg);
+    }
+    .bar--4 {
+      transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(405deg);
+    }
+    &:hover {
+      .bar--1 {
+        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(540deg);
+      }
+      .bar--2 {
+        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(225deg);
+      }
+      .bar--3 {
+        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(270deg);
+      }
+      .bar--4 {
+        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(495deg);
+      }
+    }
+  }
 }
