--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,35 +1,42 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to "#", class: "navbar-brand" do %>
-    <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
+<div class="container-barnav">
+  <div class="barnav">
+
+    <%= link_to root_path, class: "barnavlink" do%>
+    <h5>Icarus</h5><span></span>
     <% end %>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <%= link_to equipage_path, class: "barnavlink" do%>
+    <h5>L'Equipage</h5><span></span>
+    <% end %>
 
+    <%= link_to reservations_path, class: "barnavlink" do%>
+    <h5>Calendrier</h5><span></span>
+    <% end %>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <% if user_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to "Home", "#", class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Messages", "#", class: "nav-link" %>
-        </li>
-        <li class="nav-item dropdown">
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Action", "#", class: "dropdown-item" %>
-            <%= link_to "Another action", "#", class: "dropdown-item" %>
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-          </div>
-        </li>
-      <% else %>
-        <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-        </li>
-      <% end %>
-    </ul>
+    <%= link_to root_path, class: "barnavlink" do%>
+    <h5>Le Port</h5><span></span>
+    <% end %>
+
+  <% if user_signed_in? %>
+    <%= link_to destroy_user_session_path, method: :delete, class: "barnavlink" do %>
+    <h5>Log-out</h5><span></span>
+  <% end %>
+
+  <% else %>
+    <%= link_to new_user_session_path, class: "barnavlink" do %>
+    <h5>Login</h5><span></span>
+    <% end %>
+  <% end %>
+
+  </div>
+  <div class="gouvernail-container">
+    <div class="gouvernail-rond"></div>
+    <a class="gouvernail-bars">
+      <span class="bar bar--1"></span>
+      <span class="bar bar--2"></span>
+      <span class="bar bar--3"></span>
+      <span class="bar bar--4"></span>
+    </a>
   </div>
 </div>
+
