--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,6 +31,7 @@
   </div>
   <div class="gouvernail-container">
     <div class="gouvernail-rond"></div>
+    <div class="gouvernail-rond2"></div>
     <a class="gouvernail-bars">
       <span class="bar bar--1"></span>
       <span class="bar bar--2"></span>
