--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -57,8 +57,25 @@
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 10px;
-  width: 65%;
-  height: 65%;
+  width: 70%;
+  height: 70%;
+  border-radius: 50%;
+  border: 1px solid black;
+  opacity: 0;
+  transition: opacity 1s ease-out;
+  &.active {
+    opacity: 1;
+  }
+}
+
+.gouvernail-rond2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+  width: 60%;
+  height: 60%;
   border-radius: 50%;
   border: 1px solid black;
   opacity: 0;
@@ -83,6 +100,20 @@
     width: 100%;
     background-color: black;
     transition: 1s ease-out;
+    // &::before {
+    //   position: absolute;
+    //   content: "";
+    //   width: 10px;
+    //   height: 10px;
+    //   background-color:black;
+    // }
+    // &::after {
+    //   position: absolute;
+    //   content: "";
+    //   width: 10px;
+    //   height: 10px;
+    //   background-color:blue;
+    // }
 
     &.bar--1 {
       transform: translate3d(0, +$offsetY, 0);
