--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -89,7 +89,6 @@
   position: relative;
   width: 100%;
   height: 100%;
-
   $offsetY: 20px;
 
   .bar {
@@ -99,21 +98,31 @@
     height: 1px;
     width: 100%;
     background-color: black;
-    transition: 1s ease-out;
-    // &::before {
-    //   position: absolute;
-    //   content: "";
-    //   width: 10px;
-    //   height: 10px;
-    //   background-color:black;
-    // }
-    // &::after {
-    //   position: absolute;
-    //   content: "";
-    //   width: 10px;
-    //   height: 10px;
-    //   background-color:blue;
-    // }
+    transition: 0.6s ease-out;
+    &::before {
+      visibility: hidden;
+      position: absolute;
+      content: "";
+      width: 3px;
+      height: 3px;
+      border-radius: 50%;
+      background-color:black;
+      right: 0%;
+      transform: translate(-0%, -50%);
+    }
+    &::after {
+      visibility: hidden;
+      position: absolute;
+      content: "";
+      width: 3px;
+      height: 3px;
+      transform: translate(-0%, -50%);
+      border-radius: 50%;
+      background-color:black;
+
+      transition-delay: 0s;
+
+    }
 
     &.bar--1 {
       transform: translate3d(0, +$offsetY, 0);
@@ -132,43 +141,65 @@
   &:hover {
     .bar--1 {
       transform: translate3d(0, +$offsetY, 0) rotate(180deg);
+      transition-delay: 0.2s;
     }
     .bar--2 {
       transform: translate3d(0, +$offsetY, 0) rotate(180deg);
+      transition-delay: 0.2s;
     }
     .bar--3 {
       transform: translate3d(0, -$offsetY, 0) rotate(180deg);
+      transition-delay: 0.2s;
     }
     .bar--4 {
       transform: translate3d(0, -$offsetY, 0) rotate(180deg);
+      transition-delay: 0.2s;
     }
   }
 
   &.active {
+    .bar::before {
+      visibility: visible;
+      transition-delay: 0.5s;
+      transition: 0.5s ease-out;
+    }
+    .bar::after {
+      visibility: visible;
+      transition-delay: 1s;
+      transition: 0.5s ease-out;
+    }
     .bar--1 {
-      transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(450deg);
+      transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(45deg);
+      transition: 2s ease-out;
     }
     .bar--2 {
-      transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(135deg);
+      transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(90deg);
+      transition: 2s ease-out;
     }
     .bar--3 {
-      transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(180deg);
+      transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(135deg);
+      transition: 2s ease-out;
     }
     .bar--4 {
-      transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(405deg);
+      transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(180deg);
+      transition: 2s ease-out;
     }
     &:hover {
       .bar--1 {
-        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(540deg);
+        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(225deg);
+        transition: 1s ease-out;
       }
       .bar--2 {
-        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(225deg);
+        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(270deg);
+        transition: 1s ease-out;
       }
       .bar--3 {
-        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(270deg);
+        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(315deg);
+        transition: 1s ease-out;
       }
       .bar--4 {
-        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(495deg);
+        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(360deg);
+        transition: 1s ease-out;
       }
     }
   }
