--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -62,7 +62,7 @@
   border-radius: 50%;
   border: 1px solid black;
   opacity: 0;
-  transition: opacity 1s ease-out;
+  transition: opacity 1s cubic-bezier(.44,.69,.27,1.27);
   &.active {
     opacity: 1;
   }
@@ -79,7 +79,7 @@
   border-radius: 50%;
   border: 1px solid black;
   opacity: 0;
-  transition: opacity 1s ease-out;
+  transition: opacity 1s ease-in-out;
   &.active {
     opacity: 1;
   }
@@ -98,7 +98,7 @@
     height: 1px;
     width: 100%;
     background-color: black;
-    transition: 0.6s ease-out;
+    transition: 0.7s cubic-bezier(.44,.69,.27,1.27);
     &::before {
       visibility: hidden;
       position: absolute;
@@ -128,9 +128,11 @@
       transform: translate3d(0, +$offsetY, 0);
     }
     &.bar--2 {
+      visibility: hidden;
       transform: translate3d(0, +$offsetY, 0);
     }
     &.bar--3 {
+      visibility: hidden;
       transform: translate3d(0, -$offsetY, 0);
     }
     &.bar--4 {
@@ -161,45 +163,47 @@
     .bar::before {
       visibility: visible;
       transition-delay: 0.5s;
-      transition: 0.5s ease-out;
+      transition: 0.5s cubic-bezier(.44,.69,.27,1.27);
     }
     .bar::after {
       visibility: visible;
       transition-delay: 1s;
-      transition: 0.5s ease-out;
+      transition: 0.5s cubic-bezier(.44,.69,.27,1.27);
     }
     .bar--1 {
       transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(45deg);
-      transition: 2s ease-out;
+      transition: 1s cubic-bezier(.44,.69,.27,1.27);
     }
     .bar--2 {
       transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(90deg);
-      transition: 2s ease-out;
+      transition: 1s cubic-bezier(.44,.69,.27,1.27);
+      visibility: visible;
     }
     .bar--3 {
       transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(135deg);
-      transition: 2s ease-out;
+      transition: 1s cubic-bezier(.44,.69,.27,1.27);
+      visibility: visible;
     }
     .bar--4 {
       transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(180deg);
-      transition: 2s ease-out;
+      transition: 1s cubic-bezier(.44,.69,.27,1.27);
     }
     &:hover {
       .bar--1 {
-        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(225deg);
-        transition: 1s ease-out;
+        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(90deg);
+        transition: 1s cubic-bezier(.44,.69,.27,1.27);
       }
       .bar--2 {
-        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(270deg);
-        transition: 1s ease-out;
+        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(135deg);
+        transition: 1s cubic-bezier(.44,.69,.27,1.27);
       }
       .bar--3 {
-        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(315deg);
-        transition: 1s ease-out;
+        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(180deg);
+        transition: 1s cubic-bezier(.44,.69,.27,1.27);
       }
       .bar--4 {
-        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(360deg);
-        transition: 1s ease-out;
+        transform: translate3d(0, calc(0* #{$offsetY}), 0) rotate(225deg);
+        transition: 1s cubic-bezier(.44,.69,.27,1.27);
       }
     }
   }
