--- a/app/views/pages/equipage.html.erb
+++ b/app/views/pages/equipage.html.erb
@@ -2,46 +2,58 @@
   <div class="pageroom">
       <section class="room">
         <div class="crewcard">
-            <span class="circle circle--1"><div class="image-jl"></div></span>
+            <span class="circle circle--1"><div class="image image--jl"></div></span>
             <article class="content content--jl">
-              <h1>coucou</h1>
-              <h2>c'est jean-loup</h2>
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </p>
+              <h1>Jean-Loup</h1>
+              <h2>Scribe</h2>
+              <p>Profession : Dev Freelance.</p>
+              <p>Passion : Mer, Art, Nature & Code.</p>
+              <p>Scribe ce qu'il y as a scriber, uniquement en binaire.</p>
+              <br>
+              <p>Scribe d'Icarus.</p>
+              <p>Suivez-le : </p>
             </article>
         </div>
 
         <div class="crewcard">
-          <span class="circle circle--2"><div class="image-caro"></div></span>
+          <span class="circle circle--2"><div class="image image--caro"></div></span>
           <article class="content content--caro">
-            <h1>coucou</h1>
-            <h2>c'est jean-loup</h2>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
+              <h1>Caroline</h1>
+              <h2>Photographe</h2>
+              <p>Profession : Attaché territoriale.</p>
+              <p>Passion : Photo, Nature & Nude.</p>
+              <p>Capture les souvenirs, écrit le passé.</p>
+              <br>
+              <p>Photographe d'Icarus.</p>
+              <p>Suivez-la : </p>
           </article>
         </div>
 
         <div class="crewcard">
-          <span class="circle circle--3"><div class="image-roro"></div></span>
+          <span class="circle circle--3"><div class="image image--roro"></div></span>
           <article class="content content--roro">
-            <h1>coucou</h1>
-            <h2>c'est jean-loup</h2>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
+            <h1>Romain</h1>
+            <h2>Capitaine</h2>
+            <p>Profession : Kiné.</p>
+            <p>Passion : Mer, Nature, voyage.</p>
+            <p>Ramène tout le monde en vie 95% du temps.</p>
+            <br>
+            <p>Capitaine historique d'Icarus.</p>
+            <p>Suivez-le : </p>
           </article>
         </div>
 
         <div class="crewcard">
-          <span class="circle circle--4"><div class="image-alex"></div></span>
+          <span class="circle circle--4"><div class="image image--choco"></div></span>
           <article class="content content--choco">
-            <h1>coucou</h1>
-            <h2>c'est jean-loup</h2>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
+            <h1>Choco</h1>
+            <h2>Peintre</h2>
+            <p>Profession : Tatoueur.</p>
+            <p>Passion : Art, Mer, le sable.</p>
+            <p>Dessine même sur les bateaux.</p>
+            <br>
+            <p>Peintre d'Icarus.</p>
+            <p>Suivez-le : </p>
           </article>
         </div>
 
