--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,1 +1,8 @@
 <h1>Calendrier Index</h1>
+<% @reservations.each do |reservation| %>
+  <%= reservation.name %>
+<% end %>
+
+<%= link_to new_reservation_path, class: "barnavlink" do%>
+<p>Nouvelle reservation</p><span></span>
+<% end %>
