--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,8 +1,10 @@
 .pageOpacity {
+  background-color: white;
   opacity: 1;
   transition: 1s ease-out;
+  height: 100vh;
   &.active {
-    opacity: 0.02;
+    opacity: 0.03;
     pointer-events: none;
   }
 }
