--- a/app/assets/stylesheets/components/_media.scss
+++ b/app/assets/stylesheets/components/_media.scss
@@ -1,13 +1,33 @@
-@media (max-width: 960px) {
-  //   body {
-  //   width: 700px;
-  // }
+@media (max-width: 720px) {
+  section.room {
+    margin-top: 15%;
+  }
+  .crewcard {
+    .circle .image {
+    height: 250px;
+    width: 250px;
+    transform: translate(-50%, -40%);
+    }
+    &.active {
+    .circle .image {
+        height: 250px;
+        width: 250px;
+        transform: translate(20%, -0%);
+      }
+    }
+  }
 }
 
-@media (max-width: 720px) {
-  //   body {
-  //   width: 500px;
-  // }
+@media (max-width: 960px) {
+  p {
+    font-size: 0.8em;
+  }
+  h1 {
+    font-size: 1.2em;
+  }
+  h2 {
+    font-size: 1em;
+  }
 }
 
 @media (max-width: 1200px) {
@@ -26,4 +46,11 @@
     text-align: center;
   }
 
+  .barnavlink h5 {
+    opacity: 0.5;
+    transition: 0.6s ease-in-out;
+    &:hover {
+      opacity: 1;
+      }
+    }
 }
