--- a/app/views/pages/equipage.html.erb
+++ b/app/views/pages/equipage.html.erb
@@ -8,7 +8,7 @@
               <h2>Scribe</h2>
               <p>Profession : Dev Freelance.</p>
               <p>Passion : Mer, Art, Nature & Code.</p>
-              <p>Scribe ce qu'il y as a scriber, uniquement en binaire.</p>
+              <p>Scribe ce qu'il y a a scriber, uniquement en binaire.</p>
               <br>
               <p>Scribe d'Icarus.</p>
               <p>Suivez-le : </p>
