--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -16,6 +16,7 @@
   display: flex;
   justify-content: space-evenly;
   padding: 50px 0px 25px 0px;
+  transition: 1s ease-out;
 }
 
 .barnavlink {
@@ -89,6 +90,7 @@
   width: 100%;
   height: 100%;
   $offsetY: 20px;
+  transition: 1.5s cubic-bezier(.44,.69,.27,1.27);
 
   .bar {
     position: absolute;
