--- a/app/assets/stylesheets/components/_equipage.scss
+++ b/app/assets/stylesheets/components/_equipage.scss
@@ -82,8 +82,8 @@
   background-color: white;
   overflow: hidden;
   transition: 1s ease-out;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
+  border-top: 1px solid $acajoufonce;
+  border-bottom: 1px solid $acajoufonce;
 }
 
 
