--- a/app/assets/stylesheets/components/_fonts.scss
+++ b/app/assets/stylesheets/components/_fonts.scss
@@ -2,7 +2,7 @@ h5 {
   font-size: 2em;
   font-weight: lighter;
   text-transform: uppercase;
-  color: black;
+  color: $acajoufonce;
   line-height: 1em;
 }
 
