--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-<div class="pageOpacity">
-<h1>Coucou les gens Homepage</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="pageOpacity du--port">
+
 </div>
