--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,7 @@
 .container-barnav {
   position: absolute;
+  top: 0%;
+  position: fixed;
   z-index: 10000;
   width: 100vw;
   display: flex;
@@ -22,14 +24,14 @@
 .barnavlink {
   position: relative;
   text-decoration: none;
-  opacity: 0.5;
+  opacity: 0.8;
   transition: 1s ease;
 
   span {
   position: absolute;
   width: 0%;
   height: 1px;
-  background-color: black;
+  background-color: $acajoufonce;
   transition: 1s ease-out;
   }
 
@@ -60,7 +62,7 @@
   width: 70%;
   height: 70%;
   border-radius: 50%;
-  border: 1px solid black;
+  border: 1px solid $acajoufonce;
   opacity: 0;
   transition: opacity 1s cubic-bezier(.44,.69,.27,1.27);
   &.active {
@@ -77,7 +79,7 @@
   width: 60%;
   height: 60%;
   border-radius: 50%;
-  border: 1px solid black;
+  border: 1px solid $acajoufonce;
   opacity: 0;
   transition: opacity 1s ease-in-out;
   &.active {
@@ -98,7 +100,7 @@
     content: "";
     height: 1px;
     width: 100%;
-    background-color: black;
+    background-color: $acajoufonce;
     transition: 0.7s cubic-bezier(.44,.69,.27,1.27);
     &::before {
       visibility: hidden;
@@ -108,7 +110,7 @@
       height: 3px;
       right: 0;
       border-radius: 50%;
-      background-color:black;
+      background-color:$acajoufonce;
       transform: translate(-0%, -40%);
     }
     &::after {
@@ -119,7 +121,7 @@
       height: 3px;
       transform: translate(-0%, -40%);
       border-radius: 50%;
-      background-color:black;
+      background-color:$acajoufonce;
 
       transition-delay: 0s;
 
