--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -12,3 +12,6 @@ $bleu-pale: #bbf1fa;
 $rose-pale: #fcd1d1;
 $vert-pale: #a6f0c6;
 $jaune-pale: #f8dc81;
+$acajoufonce: #231903;
+// $bleu: #28527a;
+$bleu: #0d335d;
