--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -5,8 +5,72 @@
   <% end %>
 
   <%= link_to new_reservation_path, class: "barnavlink" do%>
-  <p>Nouvelleee reservation</p><span></span>
+    <p>Nouvelleee reservation</p><span></span>
   <% end %>
+
+  <div class="container-resa">
+    <div class="tableau-resa">
+      <div class="titre-resa">
+        <h1>Sorties Effectuées</h1>
+      </div>
+      <div class="list-resa">
+        <div class="resa">
+          <div class="initiateur-resa">
+            <p>j-Loup</p>
+          </div>
+          <div class="photo-resa">
+            <p>photo</p>
+          </div>
+          <div class="date-resa">
+            <p>15 Oct.</p>
+          </div>
+        </div>
+                <div class="resa">
+          <div class="initiateur-resa">
+            <p>j-Loup</p>
+          </div>
+          <div class="photo-resa">
+            <p>photo</p>
+          </div>
+          <div class="date-resa">
+            <p>15 Oct.</p>
+          </div>
+        </div>
+                <div class="resa">
+          <div class="initiateur-resa">
+            <p>j-Loup</p>
+          </div>
+          <div class="photo-resa">
+            <p>photo</p>
+          </div>
+          <div class="date-resa">
+            <p>15 Oct.</p>
+          </div>
+
+        </div>
+                <div class="resa">
+          <div class="initiateur-resa">
+            <p>j-Loup</p>
+          </div>
+          <div class="photo-resa">
+            <p>photo</p>
+          </div>
+          <div class="date-resa">
+            <p>15 Oct.</p>
+          </div>
+        </div>
+        <div class="resa">
+          <p>test</p>
+        </div>
+                <div class="resa">
+          <p>test</p>
+        </div>
+                <div class="resa">
+          <p>test</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </div>
 
