--- a/app/assets/stylesheets/components/_media.scss
+++ b/app/assets/stylesheets/components/_media.scss
@@ -8,6 +8,9 @@
     width: 250px;
     transform: translate(-50%, -40%);
     }
+    p {
+      line-height: 1em;
+    }
     &.active {
     .circle .image {
         height: 250px;
