--- a/app/assets/stylesheets/components/_calendrier.scss
+++ b/app/assets/stylesheets/components/_calendrier.scss
@@ -2,34 +2,29 @@
   position: relative;
   display: flex;
   justify-content: center;
-  top: 20%;
+  top: 20vh;
+  & span {
+    content: "";
+    position: absolute;
+    top: 0%;
+    left: -10%;
+    height: 150%;
+    width: 1px;
+    background-color: black;
+    }
 }
 
 .tableau-resa {
   position: absolute;
   border: 1px solid black;
   width: 60vw;
-  height: 70vh;
+  height: 80vh;
   text-align: center;
   overflow: scroll;
 }
 
 .tableau-resa::-webkit-scrollbar {
     display: none;
-}
-
-.list-resa {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-.resa {
-  display: flex;
-  height: 10%;
-  width: 100%;
-  justify-content: space-between;
-  border: 1px solid black;
 }
 
 .titre-resa {
@@ -39,4 +34,49 @@
   z-index: 100;
   background-color: white;
   height: 20%;
+}
+
+.list-resa {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  box-sizing: border-box;
+}
+
+.resa {
+  margin-top: 30px;
+  display: flex;
+}
+
+.photo-resa {
+  background-image: url(port.jpg);
+  background-size: cover;
+  background-position: bottom;
+  display: flex;
+  flex-grow: 1;
+  border-radius: 0px 40px 40px 0px;
+  opacity: 0.9;
+  & p {
+    display: flex;
+    flex-grow: 2;
+    justify-content: center;
+    color: white;
+  }
+}
+
+.initiateur-resa {
+  border-radius: 0px 30px 30px 0px;
+  background-color: $acajoufonce;
+  opacity: 0.7;
+  padding-right: 13px;
+  padding-left: 10px;
+  & p {
+    opacity: 1;
+    color: white;
+  }
+}
+
+.date-resa {
+  background-color: white;
+  padding-left: 10px;
 }
