--- a/app/assets/stylesheets/components/_calendrier.scss
+++ b/app/assets/stylesheets/components/_calendrier.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   top: 20vh;
-  & span {
+  &::before {
     content: "";
     position: absolute;
     top: 0%;
@@ -16,7 +16,6 @@
 
 .tableau-resa {
   position: absolute;
-  border: 1px solid black;
   width: 60vw;
   height: 80vh;
   text-align: center;
@@ -44,8 +43,9 @@
 }
 
 .resa {
-  margin-top: 30px;
+  margin-top: 50px;
   display: flex;
+  height: 50px;
 }
 
 .photo-resa {
@@ -54,7 +54,7 @@
   background-position: bottom;
   display: flex;
   flex-grow: 1;
-  border-radius: 0px 40px 40px 0px;
+  border-radius: 40px 40px 40px 40px;
   opacity: 0.9;
   & p {
     display: flex;
@@ -65,7 +65,7 @@
 }
 
 .initiateur-resa {
-  border-radius: 0px 30px 30px 0px;
+  border-radius: 30px 30px 30px 30px;
   background-color: $acajoufonce;
   opacity: 0.7;
   padding-right: 13px;
