--- a/app/assets/stylesheets/components/_equipage.scss
+++ b/app/assets/stylesheets/components/_equipage.scss
@@ -33,6 +33,7 @@
   transition: 1s ease;
   &.active {
     height: 100%;
+    z-index : 10;
     .circle {
       height: 100%;
       width: 100%;
